# litter

./: .gitattributes  .gitignore  AGENTS.md  Package.swift  README.md  project.yml
Frameworks/codex_bridge.xcframework/: Info.plist
Frameworks/ios_system/files.xcframework/: Info.plist
Frameworks/ios_system/ios_system.xcframework/: Info.plist
Frameworks/ios_system/shell.xcframework/: Info.plist
Frameworks/ios_system/text.xcframework/: Info.plist
Litter.xcodeproj/: project.pbxproj
Litter.xcodeproj/xcshareddata/xcschemes/: Litter.xcscheme  LitterRemote.xcscheme
Sources/Litter/: Extensions.swift  Info.plist  LitterApp.swift
Sources/Litter/Bridge/: CodexBridge.swift  CodexProtocol.swift  IosSystemBridge.m  JSONRPCClient.swift  codex_bridge_objc.h
Sources/Litter/Models/: AppState.swift  ChatTypes.swift  ConnectionTarget.swift  NetworkDiscovery.swift  OnDeviceCodexFeature.swift  SSHSessionManager.swift  ServerConnection.swift  ServerManager.swift
Sources/Litter/Views/: AccountView.swift  BrandLogo.swift  CodeBlockView.swift  ConversationView.swift  DirectoryPickerView.swift  (+8 more)
apps/android/: README.md  build.gradle.kts  settings.gradle.kts
apps/ios/: project.yml
codex-bridge/: Cargo.toml
codex-bridge/src/: ios_exec.rs  lib.rs
docs/: perf-ux-parity-baseline.md
docs/architecture/: ios-android-monorepo-migration-plan.md
docs/releases/: android-play-internal-checklist.md
scripts/: build-rust.sh  download-ios-system.sh
tools/scripts/: README.md  build-android-rust.sh  deploy-android-ondevice.sh  playstore-setup.sh  playstore-upload.sh
(+152 files in other folders)
