[package]
name = "codex-bridge"
version = "0.1.0"
edition = "2024"

[lib]
name = "codex_bridge"
crate-type = ["staticlib"]

[dependencies]
codex-app-server = { path = "../../codex/codex-rs/app-server" }
codex-utils-cli = { path = "../../codex/codex-rs/utils/cli" }
codex-core = { path = "../../codex/codex-rs/core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
